Add checkstyle rule for List.of() / Set.of() / Map.of()
This commits adds a checkstyle rule to not use List.of(), Set.of() and Map.of(), preferring Collections.emptyList() / emptySet() / emptyMap().

It replaces usages of these methods across the code base.

closes gh-31973